z-index fix with Chat

--- a/rails_app/app/assets/stylesheets/dc-iiif.css
+++ b/rails_app/app/assets/stylesheets/dc-iiif.css
@@ -24,3 +24,7 @@
     font-weight: 600;
   }
 }
+
+.clover-viewer-information-panel {
+  z-index: auto !important;
+}
